--- a/index.html
+++ b/index.html
@@ -531,6 +531,48 @@
                   </div>
                 </div>
 
+                  <div class="col-lg-4 col-md-6 portfolio-item">
+                  <div class="portfolio-wrap">
+                    <div class="video-thumbnail" style="position:relative;cursor:pointer;">
+                      <video width="100%" muted style="pointer-events:none;filter:brightness(0.7);">
+                        <source src="assets/img/new/30.mp4" type="video/mp4">
+                      </video>
+                      <div class="play-btn" data-video-src="assets/img/new/30.mp4" style="position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);font-size:60px;color:white;z-index:3;pointer-events:auto;">
+                        <i class="bi bi-play-circle-fill"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                 <div class="col-lg-4 col-md-6 portfolio-item">
+                  <div class="portfolio-wrap">
+                    <div class="video-thumbnail" style="position:relative;cursor:pointer;">
+                      <video width="100%" muted style="pointer-events:none;filter:brightness(0.7);">
+                        <source src="assets/img/new/31.mp4" type="video/mp4">
+                      </video>
+                      <div class="play-btn" data-video-src="assets/img/new/31.mp4" style="position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);font-size:60px;color:white;z-index:3;pointer-events:auto;">
+                        <i class="bi bi-play-circle-fill"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 portfolio-item">
+                  <div class="portfolio-wrap">
+                    <div class="video-thumbnail" style="position:relative;cursor:pointer;">
+                      <video width="100%" muted style="pointer-events:none;filter:brightness(0.7);">
+                        <source src="assets/img/new/32.mp4" type="video/mp4">
+                      </video>
+                      <div class="play-btn" data-video-src="assets/img/new/32.mp4" style="position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);font-size:60px;color:white;z-index:3;pointer-events:auto;">
+                        <i class="bi bi-play-circle-fill"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+
+
+
                   
               </div><!-- End Portfolio Container -->
             </div>
